fixed dataGrid height and wrap and update onBlur

--- a/packages/shared-ui/src/components/Shared/DataGrid/DataGrid.module.css
+++ b/packages/shared-ui/src/components/Shared/DataGrid/DataGrid.module.css
@@ -3,12 +3,10 @@
 }
 
 .agContainer {
-  height: 100%;
   width: 100%;
 }
 
 .agContainer.ag-theme-alpine {
-  /* --ag-row-height: 36px; */
   --ag-header-height: 40px;
   --ag-font-size: 0.9rem;
 }
@@ -16,8 +14,7 @@
 .agContainer :global(.ag-header),
 .agContainer :global(.ag-header-cell),
 .agContainer :global(.ag-header-row) {
-  /* height: var(--ag-header-height) !important;
-  min-height: var(--ag-header-height) !important; */
+  min-height: var(--ag-header-height) !important;
   background: var(--ag-header-bg, #f5f5f5);
 }
 
@@ -29,9 +26,12 @@
   border-right: 1px solid #d0d0d0 !important;
   font-size: 0.8rem !important;
   line-height: 1.1;
-  background-color: white !important;
+  overflow: hidden;
+
   display: flex;
-  align-items: center;
+  align-items: center;        
+  justify-content: flex-start; 
+
 }
 
 .agContainer :global(.ag-cell-wrapper),
@@ -39,13 +39,18 @@
   display: flex;
   align-items: center;
   height: 100%;
+  overflow: hidden; 
 }
 
 .agContainer :global(.ag-cell .MuiBox-root) {
   display: flex;
   align-items: center;
   height: auto;
-  /* min-height: var(--ag-row-height); */
+  min-height: var(--ag-row-height);
+  padding: 0 !important;
+}
+
+.agContainer :global(.MuiIconButton-root){
   padding: 0 !important;
 }
 
@@ -53,25 +58,31 @@
 .cellEditorBox {
   width: 100%;
   height: auto;                  
-  /* min-height: var(--ag-row-height); */
-  padding: 0;
+  min-height: var(--ag-row-height);
+  padding: 0px !important;
   display: flex;
   align-items: center;
+  
 }
 
-.cellEditorBox {
-  align-items: center;
+
+.agContainer:dir(ltr) :global(.ag-cell) {
+  padding-right: 0 !important;
+}
+.agContainer:dir(rtl) :global(.ag-cell) {
+  padding-left: 0 !important;
 }
 
-.cellBoxCentered,
-.cellEditorBoxCentered {
-  justify-content: center;
+.agContainer :global(.ag-cell.cellBoxCentered) {
+  justify-content: center;  
+  padding: 0 !important; 
+  margin: 0 !important; 
 }
 
 .cellEditorInner {
   width: 100%;
   height: auto;
-  /* min-height: var(--ag-row-height);  */
+  min-height: var(--ag-row-height); 
   display: flex;
   align-items: center;
   box-sizing: border-box;
@@ -110,12 +121,12 @@
   white-space: normal;
   line-height: 1.2;
   height: auto;
-  align-items: flex-start;
+  /* align-items: flex-start; */
 }
 
 .wrapTextCell .cellBox {
   height: auto;
-  align-items: flex-start;
+  /* align-items: flex-start; */
 }
 
 .agContainer :global(.ag-cell-focus),
@@ -141,7 +152,6 @@
 
 @media (min-width: 1920px) {
   .agContainer.ag-theme-alpine {
-    /* --ag-row-height: 38px; */
     --ag-header-height: 44px;
     --ag-font-size: 1rem;
   }
@@ -158,7 +168,6 @@
 
 @media (max-width: 1599px) {
   .agContainer.ag-theme-alpine {
-    /* --ag-row-height: 15px !important; */
     --ag-header-height: 32px;
     --ag-font-size: 11px;
   }
@@ -178,7 +187,6 @@
 
 @media (max-width: 1024px) {
   .agContainer.ag-theme-alpine {
-    /* --ag-row-height: 24px; */
     --ag-header-height: 30px;
     --ag-font-size: 10px;
   }
@@ -198,7 +206,6 @@
 
 @media (max-width: 834px) {
   .agContainer.ag-theme-alpine {
-    /* --ag-row-height: 22px; */
     --ag-header-height: 26px;
     --ag-font-size: 9px;
   }
