--- a/packages/shared-ui/src/components/Shared/DataGrid/components/button/button.module.css
+++ b/packages/shared-ui/src/components/Shared/DataGrid/components/button/button.module.css
@@ -1,9 +1,10 @@
 
 .gridButton {
     opacity: 1;
-    width: 10px !important;
+    width: 10px ;
     height: 30px;
     object-fit: contain; 
+    min-width: 0 !important; 
   }
   
   .gridButton:hover {
